syntax="proto3";

package stockscraper;
option go_package="stockscraperpb";

message FetchRequest {
    string name=1;
}

message FetchResponse {
    float price=1;
}

message MonitorRequest {
    string name=1;
    int32 duration=2;
}

message MonitorResponse {
    float price=1;
}

service Stockscraper {
    rpc Fetch(FetchRequest) returns (FetchResponse) {};
    rpc Monitor(MonitorRequest) returns (stream MonitorResponse) {};
}
